# learngo

./: .bazelrc  .gitignore  BUILD  Makefile  WORKSPACE  deps.bzl  go.mod  go.sum  serverless.yaml  skaffold.yaml
.github/actions/draft/: action.yml  index.js
.github/workflows/: build.yaml  created.yml  deleted.yml  deploy.yml  edited.yml  infra.yaml  metrics.yml  prereleased.yml  published.yml  released.yml  unpublished.yml
controllers/user/: user.go
controllers/userregistration/: registration.go
deploy/: ecr.tf  eks-cluster.tf  irsa.tf  kubernetes.tf  msk.tf  outputs.tf  route53.tf  stage.tfvars  variables.tf  versions.tf  vpc.tf
deploy/kube/: Chart.yaml
deploy/kube/templates/: istio.yaml
deploy/modules/learngo-services/: ecr.tf  main.tf  variables.tf
engine-migration/schemas/: _init.sql
functions/registration/: main.go  main_test.go
functions/user/: main.go  main_test.go
internal/aws/: BUILD.bazel  kafka.go
internal/config/: config.go
internal/dbmigration/: location_service.go
internal/ephemeraldb/: errors.go  executor.go  logging.go  provisioner.go  random_strings.go  types.go
internal/kafkaBuilder/: BUILD.bazel  handler.go
internal/storage/: storage.go  types.go
internal/storage/postgres/: account.go  event.go  factory.go  store.go  test.go
internal/util/: BUILD.bazel  apierror.go  go.mod  go.sum  kafka.go  utils.go
k8s/: Chart.yaml  frontend.yaml  order.yaml  values.frontend.yaml  values.order.yaml  values.yaml
k8s/templates/: deployment.yaml  service.yaml  serviceaccount.yaml
resource/: AuroraRDSCluster.yml  AuroraRDSClusterParameter.yml  LambdaRole.yml  PostgreSqlRDSInstance.yml  ServerlessInternetGateway.yml  ServerlessSecurityGroup.yml  ServerlessSubnetGroup.yml  ServerlessVPC.yml
services/frontend/: BUILD.bazel  handlers.go  main.go  service.go  utils.go
services/order/: BUILD.bazel  Dockerfile  main.go
