load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["kafka.go"],
    importpath = "github.com/ddvkid/learngo/internal/aws",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_aws_aws_sdk_go_v2_service_kafka//:go_default_library"],
)
