load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "apierror.go",
        "env.go",
        "utils.go",
    ],
    importpath = "github.com/ddvkid/learngo/internal/util",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_aws_aws_lambda_go//events:go_default_library",
        "@com_github_go_playground_validator_v10//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
