load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

package(default_visibility = ["//visibility:public"])
web_sources = glob(["templates/**"])

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ddvkid/learngo/services/frontend",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gorilla_mux//:go_default_library"],
)

go_binary(
    name = "frontend",
    data = web_sources,
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    data = web_sources,
    embed = [":go_default_library"],
    importpath = "github.com/ddvkid/learngo/services/frontend",
)