load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:public"])

web_sources = glob(["templates/**"])

go_library(
    name = "go_default_library",
    srcs = [
        "handlers.go",
        "main.go",
        "service.go",
    ],
    importpath = "github.com/ddvkid/learngo/services/frontend",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:go_default_library"],
)

go_binary(
    name = "frontend",
    data = web_sources,
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "frontend_linux_bin",
    data = web_sources,
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

