load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ddvkid/learngo/services/order",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/util:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/signer/v4:go_default_library",
        "@com_github_aws_aws_sdk_go_v2//aws:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_config//:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_credentials//stscreds:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_service_kafka//:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_service_sts//:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_segmentio_kafka_go//:go_default_library",
        "@com_github_segmentio_kafka_go_sasl_aws_msk_iam//:go_default_library",
    ],
)

go_binary(
    name = "order",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":go_default_library"],
    importpath = "github.com/ddvkid/learngo/services/order",
)
