load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ddvkid/learngo/services/order",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/kafkaBuilder:go_default_library",
        "//internal/util:go_default_library",
    ],
)

go_binary(
    name = "order",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "order_linux_bin",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)
